# slicing-n-cube

./: CMakeLists.txt  LICENSE  README.md  shell.nix
data/: mss_cardinality.xlsx
include/: bitset_comparator.hpp  common.hpp  complex.hpp  edge.hpp  low_weight.hpp  lp.hpp  multithreaded.hpp  slice_cube.hpp  sliceable_set.hpp  symmetry.hpp  vertex.hpp
src/: CMakeLists.txt  complex.cpp  edge.cpp  edge_cardinality.cpp  final.c  hyperplanes_low_weight.cpp  low_weight.cpp  lp.cpp  main.cpp  slice_5_cube.cpp  slice_cube.cpp  slice_cube_degree_two.cpp  slice_cube_final.c  slice_cube_low_weight.cpp  slice_cube_one_weight.cpp  sliceable_set.cpp  smallest_equivalent_low_weight.cpp  stats.cpp  storage.cpp  symmetry.cpp  write_hyperplanes.cpp
